--- a/requirements/environment.yml
+++ b/requirements/environment.yml
@@ -4,6 +4,6 @@ channels:
 dependencies:
   - python= 3.13
   - pip:
-      - r requirements.txt
-      - r requirements_scripts.txt
-      - r requirements_test.txt
+      - -r requirements.txt
+      - -r requirements_scripts.txt
+      - -r requirements_test.txt
