--- a/requirements/environment.yml
+++ b/requirements/environment.yml
@@ -1,9 +1,17 @@
 name: p5
 channels:
-  - defaults
+ - conda-forge      # priority channel for up-to-date, cross-compiled packages (biopython, selenium, and other packages we might need)
+ - defaults         # fallback to packages from default channel
+
 dependencies:
-  - python= 3.13
-  - pip:
-      - -r requirements.txt
-      - -r requirements_scripts.txt
-      - -r requirements_test.txt
+ - python=3.13      # lock to the exact interpreter version you're targeting
+ - requests         # HTTP client used by scripts to call PubMed/Europe PMC APIs
+ - biopython        # provides Bio.Entrez for PubMed/PMC lookups and efetch
+ - selenium         # optional JS-driven fallback for tricky PDF pages
+ - selenium-manager # auto-downloads and manages the matching ChromeDriver binary
+ - pip              # still required to pull in LLM clients & dev tools
+
+ - pip:
+   - -r requirements/requirements.txt            # core LLM & converter libraries (ollama, llama-index, docling)
+   - -r requirements/requirements_scripts.txt    # CLI helpers like click
+   - -r requirements/requirements_test.txt       # testing & formatting (pytest, black)
