--- a/.github/actions/setup_env/action.yaml
+++ b/.github/actions/setup_env/action.yaml
@@ -14,12 +14,13 @@ runs:
             id: env-cache
             with:
                 path: ${{ env.pythonLocation }}
-                key: ${{ env.pythonLocation }}-${{ hashFiles('./requirements/requirements.txt') }}-${{ hashFiles('./requirements/requirements_test.txt') }} }}
+                key: ${{ env.pythonLocation }}-${{ hashFiles('./requirements/requirements.txt') }}-${{ hashFiles('./requirements/requirements_scripts.txt') }}-${{ hashFiles('./requirements/requirements_test.txt') }} }}
 
         -   name: Install Dependencies
             if: ${{ steps.env-cache.outputs.cache-hit != 'true' }}
             run: |
                 python -m pip install --upgrade pip
                 pip install -r requirements/requirements.txt
+                pip install -r requirements/requirements_scripts.txt
                 pip install -r requirements/requirements_test.txt
             shell: bash
