CI: Add scripts dir to formatting check

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,3 +48,4 @@ jobs:
     -   name: Black Formatting
         run: |
             black ./src/p5_pdf_parser --check --skip-magic-trailing-comma
+            black ./scripts --check --skip-magic-trailing-comma
