--- a/.github/actions/setup_env/action.yaml
+++ b/.github/actions/setup_env/action.yaml
@@ -1,25 +1,32 @@
-name: Setup/Cache Env
-description: 'Sets up and caches a python env. Will only install dependencies if no cache was hit.'
-
+# .github/actions/setup_env/action.yaml
+name: "setup_env"
+description: "Create and activate the Conda environment via mamba"
+inputs:
+ environment-file:
+   description: "Path to the environment.yml file"
+   required: true
+   default: "requirements/environment.yml"
 runs:
-    using: composite
-    steps:
-        -   name: Set up Python 3.13
-            uses: actions/setup-python@v5.6.0
-            with:
-                python-version: "3.13"
+ using: "composite"
+ steps:
+   - name: Install Miniconda
+     uses: goanpeca/setup-miniconda@v1
+     with:
+       python-version: "3.13"
+       auto-activate-base: false
 
-        -   name: Cache Env
-            uses: actions/cache@v4.2.3
-            id: env-cache
-            with:
-                path: ${{ env.pythonLocation }}
-                key: ${{ env.pythonLocation }}-${{ hashFiles('./requirements/requirements.txt') }}-${{ hashFiles('./requirements/requirements_test.txt') }} }}
+   - name: Install Mamba
+     shell: bash
+     run: |
+       conda install --yes mamba -n base -c conda-forge
 
-        -   name: Install Dependencies
-            if: ${{ steps.env-cache.outputs.cache-hit != 'true' }}
-            run: |
-                python -m pip install --upgrade pip
-                pip install -r requirements/requirements.txt
-                pip install -r requirements/requirements_test.txt
-            shell: bash
+   - name: Create environment
+     shell: bash
+     run: |
+       mamba env create --yes -f ${{ inputs.environment-file }} -n p5
+
+   - name: Persist environment
+     shell: bash
+     run: |
+       echo "$HOME/miniconda3/envs/p5/bin" >> $GITHUB_PATH
+       echo "CONDA_PREFIX=$HOME/miniconda3/envs/p5" >> $GITHUB_ENV
