--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,11 +9,14 @@ on:
 
 jobs:
  test:
-   name: Test on ${{ matrix.os }}
-   runs-on: ${{ matrix.os }}
    strategy:
      matrix:
-       os: [ ubuntu-latest, macos-latest, windows-latest ]
+       include:
+         - os: ubuntu-latest
+           lockfile: conda-linux-64.lock.yml
+         - os: macos-latest
+           lockfile: conda-osx-arm64.lock.yml
+   runs-on: ${{ matrix.os }}
    steps:
      - name: Checkout code
        uses: actions/checkout@v3
@@ -21,7 +24,7 @@ jobs:
      - name: Setup environment
        uses: ./.github/actions/setup_env
        with:
-         environment-file: requirements/environment.yml
+         environment-file: ${{ matrix.lockfile }}
 
      - name: Run tests
        run: pytest --maxfail=1 --disable-warnings -q
