--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,5 +1,7 @@
-ollama==0.5.1
-llama-index==0.12.4
+# ollama==0.5.1
+# llama-index==0.12.4
 docling==2.36.1
-GitPython==3.1.44
-joblib==1.5.1 # For testing I think?
+# GitPython==3.1.44
+# joblib==1.5.1 # For testing I think?
+selenium==4.33.0
+# selenium-manager==4.33.0
