ci: fix conda environment activation using 'conda run' across CI jobs

--- a/.github/actions/setup_env/action.yaml
+++ b/.github/actions/setup_env/action.yaml
@@ -1,36 +1,34 @@
 name: Setup/Cache Env
-description: 'Sets up and caches a python env. Will only install dependencies if no cache was hit.'
+description: 'Sets up and caches a Python env using Conda. Falls back to pip only if needed.'
 
 runs:
-   using: composite
-   steps:
-       - name: Set up Python 3.13
-         uses: actions/setup-python@v5.6.0
-         with:
-             python-version: "3.13"
+ using: composite
+ steps:
+   - name: Set up Python 3.13
+     uses: actions/setup-python@v5.6.0
+     with:
+       python-version: "3.13"
 
-       - name: Cache Env
-         uses: actions/cache@v4.2.3
-         id: env-cache
-         with:
-             path: ${{ env.pythonLocation }}
-             key: ${{ env.pythonLocation }}-${{ hashFiles('./requirements/environment.yml') }}
+   - name: Cache Env
+     uses: actions/cache@v4.2.3
+     id: env-cache
+     with:
+       path: ${{ env.pythonLocation }}
+       key: ${{ env.pythonLocation }}-${{ hashFiles('requirements/environment.yml') }}
 
-       - name: Install Dependencies from environment.yml first through Conda
-         if: ${{ steps.env-cache.outputs.cache-hit != 'true' }}
-         run: |
-             conda env list | grep p5 || conda env create -f requirements/environment.yml
-             echo "source activate p5" >> $GITHUB_ENV
-         shell: bash
+   - name: Create Conda Environment from environment.yml
+     if: ${{ steps.env-cache.outputs.cache-hit != 'true' }}
+     run: |
+       conda env list | grep p5 || conda env create -f requirements/environment.yml
+     shell: bash
 
-       - name: Install extra pip requirements (if files exist)
-         run: |
-             set -e
-             source activate p5
-             for file in requirements/requirements*.txt; do
-                 if [[ -f "$file" ]]; then
-                     echo "Installing from $file..."
-                     pip install -r "$file"
-                 fi
-             done
-         shell: bash
+   - name: Install extra pip requirements (if files exist)
+     run: |
+       set -e
+       for file in requirements/requirements*.txt; do
+         if [[ -f "$file" ]]; then
+           echo "Installing from $file..."
+           conda run -n p5 pip install -r "$file"
+         fi
+       done
+     shell: bash
