--- a/.github/actions/setup_env/action.yaml
+++ b/.github/actions/setup_env/action.yaml
@@ -1,34 +1,26 @@
 name: Setup/Cache Env
-description: 'Sets up and caches a Python env using Conda. Falls back to pip only if needed.'
+description: 'Sets up and caches a python env. Will only install dependencies if no cache was hit.'
 
 runs:
- using: composite
- steps:
-   - name: Set up Python 3.13
-     uses: actions/setup-python@v5.6.0
-     with:
-       python-version: "3.13"
+    using: composite
+    steps:
+        -   name: Set up Python 3.13
+            uses: actions/setup-python@v5.6.0
+            with:
+                python-version: "3.13"
 
-   - name: Cache Env
-     uses: actions/cache@v4.2.3
-     id: env-cache
-     with:
-       path: ${{ env.pythonLocation }}
-       key: ${{ env.pythonLocation }}-${{ hashFiles('requirements/environment.yml') }}
+        -   name: Cache Env
+            uses: actions/cache@v4.2.3
+            id: env-cache
+            with:
+                path: ${{ env.pythonLocation }}
+                key: ${{ env.pythonLocation }}-${{ hashFiles('./requirements/requirements.txt') }}-${{ hashFiles('./requirements/requirements_scripts.txt') }}-${{ hashFiles('./requirements/requirements_test.txt') }} }}
 
-   - name: Create Conda Environment from environment.yml
-     if: ${{ steps.env-cache.outputs.cache-hit != 'true' }}
-     run: |
-       conda env list | grep p5 || conda env create -f requirements/environment.yml
-     shell: bash
-
-   - name: Install extra pip requirements (if files exist)
-     run: |
-       set -e
-       for file in requirements/requirements*.txt; do
-         if [[ -f "$file" ]]; then
-           echo "Installing from $file..."
-           conda run -n p5 pip install -r "$file"
-         fi
-       done
-     shell: bash
+        -   name: Install Dependencies
+            if: ${{ steps.env-cache.outputs.cache-hit != 'true' }}
+            run: |
+                python -m pip install --upgrade pip
+                pip install -r requirements/requirements.txt
+                pip install -r requirements/requirements_scripts.txt
+                pip install -r requirements/requirements_test.txt
+            shell: bash
