--- a/ruff.toml
+++ b/ruff.toml
@@ -40,7 +40,7 @@ target-version = "py313"
 # Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
 # McCabe complexity (`C901`) by default.
 select = ["E4", "E7", "E9", "F"]
-extend-select = ["PD002"]
+extend-select = ["PD002", "PD008", "PD009", "PD010", "PD011", "PD012", "PD013", "PD015", "PD901", "C901", "BLE001", "T201"]
 ignore = []
 
 # Allow fix for all enabled rules (when `--fix`) is provided.
