--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,8 +3,7 @@ name: CI
 on:
   pull_request:
   push:
-    branches: [feature/evaluator-class]
-    #[main]
+    branches: [main]
 
 permissions:
       id-token: write
@@ -52,5 +51,5 @@ jobs:
     - name: Black Formatting - scripts
       run:  black ./scripts --check --skip-magic-trailing-comma
 
-    #- name: Black Formatting - tests
-    #  run:  black ./tests --check --skip-magic-trailing-comma
+    - name: Black Formatting - tests
+      run:  black ./tests --check --skip-magic-trailing-comma
