--- a/.gitignore
+++ b/.gitignore
@@ -202,4 +202,5 @@ cython_debug/
 # Datasource local storage ignored files
 /dataSources/
 /dataSources.local.xml
-scripts/data/*
+scripts/data/*.DS_Store
+scripts/.DS_Store
