--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,10 +49,10 @@ jobs:
         run: black ./src/P5/p5_pdf_parser --check --skip-magic-trailing-comma
 
     - name: Black Formatting - scripts
-      run:  black ./scripts --check --skip-magic-trailing-comma
+      run:  black ./src/P5/scripts --check --skip-magic-trailing-comma
 
     - name: Black Formatting - tests
-      run:  black ./tests --check --skip-magic-trailing-comma
+      run:  black ./src/P5/tests --check --skip-magic-trailing-comma
 
     - name: Ruff Linting
       run: ruff check
